@@ -1,3 +1,9 @@
+2009-06-16  Nick Clifton  <nickc@redhat.com>
+
+	PR 10197
+	* testsuite/test-demangle.c: Rename getline to get_line to avoid
+	conflicts with system function of the same name.
+
 2009-05-30  Eli Zaretskii  <eliz@gnu.org>
 
 	* snprintf.c: Doc fix.
